add auth feature add delivery remove delivery from list

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,10 @@ dependencies:
 
   core:
     path: features/core/
+
+  authentication:
+    path: features/authentication
+
   delivery:
       path: features/delivery
   dashboard:
