add vendor feature add vendor details

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   dashboard:
     path: features/dashboard
 
+  vendor:
+    path: features/vendor
+
 dev_dependencies:
   flutter_test: { sdk: flutter }
   flutter_lints: ^1.0.4
