--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:label="mydelivery_admin"
+        android:label="My Delivery Admin"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
