--- a/features/core/pubspec.yaml
+++ b/features/core/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cloud_firestore: ^3.1.17
   animated_text_kit: ^4.2.1
   curved_navigation_bar: ^1.0.3
+  flutter_rating_bar: ^4.0.1
 
 
 
