--- a/features/core/pubspec.yaml
+++ b/features/core/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   animated_text_kit: ^4.2.1
   curved_navigation_bar: ^1.0.3
   flutter_rating_bar: ^4.0.1
-
+  record: ^4.4.0
+  audioplayers: ^1.0.0
 
 
 
