--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   vendor:
     path: features/vendor
 
+  quickorder:
+    path: features/quickOrder
+
 dev_dependencies:
   flutter_test: { sdk: flutter }
   flutter_lints: ^1.0.4
