add version to get available_quick_orders

--- a/features/core/pubspec.yaml
+++ b/features/core/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   audioplayers: ^1.0.0
   flutter_typeahead: ^4.3.1
   flutter_contacts: ^1.1.6
+  package_info_plus: ^4.1.0
 
 
 dev_dependencies:
