--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,8 +27,8 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 apply plugin: 'com.google.gms.google-services'      //added
 
 android {
-    compileSdkVersion 33
-
+    compileSdkVersion 34
+    namespace "com.mydelivery.mydelivery_admin"
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -45,8 +45,8 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.mydelivery.mydelivery_admin"
-        minSdkVersion flutter.minSdkVersion
-        targetSdkVersion 31
+        minSdkVersion 23
+        targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         // Enabling multidex support.
@@ -74,4 +74,6 @@ dependencies {
     //added
     implementation platform('com.google.firebase:firebase-bom:29.0.3')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.android.support:multidex:2.0.1' //enter the latest multidex version
+
 }
