--- a/features/core/pubspec.yaml
+++ b/features/core/pubspec.yaml
@@ -15,11 +15,11 @@ dependencies:
   provider: ^6.0.2
   flutter_form_builder: ^9.1.0
   form_builder_validators: ^11.0.0
-  location: ^4.4.0
-  geocoding: ^2.0.4
+  location: ^7.0.0
+  geocoding: ^3.0.0
   cool_alert: ^2.0.1
   intl: ^0.19.0
-  shared_preferences: ^2.0.12
+  shared_preferences: ^2.3.2
   shimmer: ^2.0.0
   cached_network_image: ^3.3.0
   flutter_staggered_animations: ^1.0.0
@@ -30,15 +30,15 @@ dependencies:
   form_builder_image_picker: ^4.0.0
   flutter_speed_dial: ^5.0.0+1
   mime: ^1.0.1
-  cloud_firestore: ^4.8.2
+  cloud_firestore: ^5.2.1
   animated_text_kit: ^4.2.1
   curved_navigation_bar: ^1.0.3
   flutter_rating_bar: ^4.0.1
-  record: ^4.4.0
-  audioplayers: ^1.0.0
+  record: ^5.1.2
+  audioplayers: ^6.0.0
   flutter_typeahead: ^5.2.0
-  flutter_contacts: ^1.1.6
-  package_info_plus: ^4.1.0
+  flutter_contacts: ^1.1.9+2
+  package_info_plus: ^8.0.2
 
 
 dev_dependencies:
